Various Little Changes
Added the ability for commands to not be require the sender to be in a vc. Also added the joinfriend and playfriend commands.