@@ -1,5 +1,6 @@
 package io.github.mosadie.jplexbot.discord;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -13,13 +14,15 @@ import org.reflections.Reflections;
 import io.github.mosadie.jplexbot.JPlexBot;
 import io.github.mosadie.jplexbot.discord.commands.Command;
 import net.dv8tion.jda.core.JDA;
+import net.dv8tion.jda.core.JDA.Status;
 import net.dv8tion.jda.core.JDABuilder;
 import net.dv8tion.jda.core.OnlineStatus;
 import net.dv8tion.jda.core.Permission;
-import net.dv8tion.jda.core.JDA.Status;
 import net.dv8tion.jda.core.entities.ChannelType;
 import net.dv8tion.jda.core.entities.Game;
+import net.dv8tion.jda.core.entities.Guild;
 import net.dv8tion.jda.core.entities.Member;
+import net.dv8tion.jda.core.entities.SelfUser;
 import net.dv8tion.jda.core.entities.User;
 import net.dv8tion.jda.core.entities.VoiceChannel;
 import net.dv8tion.jda.core.events.message.MessageReceivedEvent;
@@ -47,7 +50,7 @@ public class DiscordConnection extends ListenerAdapter {
         commands = new HashMap<>();
         for (Class<? extends Command> commandClass : commandClasses) {
             try {
-                Command command = commandClass.newInstance();
+                Command command = commandClass.getDeclaredConstructor().newInstance();
                 commands.put(prefix + command.getCommandName(), command);
             } catch (Exception e) {
                 e.printStackTrace();
@@ -76,12 +79,7 @@ public class DiscordConnection extends ListenerAdapter {
             return;
         }
 
-        VoiceChannel voiceChannel = getVoiceChannel(event.getAuthor());
-        if (voiceChannel == null) {
-            event.getChannel().sendMessage("Sorry, " + event.getAuthor().getAsMention()
-                    + ", you must join a voice channel I can access before sending commands.").queue();
-            return;
-        }
+        
 
         String[] commandAndArgs = event.getMessage().getContentRaw().split(" ", 2);
         String command = commandAndArgs[0].toLowerCase();
@@ -97,11 +95,37 @@ public class DiscordConnection extends ListenerAdapter {
             return;
         }
 
+        VoiceChannel voiceChannel = getVoiceChannel(event.getAuthor());
+        if (voiceChannel == null && commands.get(command).requireVC()) {
+            event.getChannel().sendMessage("Sorry, " + event.getAuthor().getAsMention()
+                    + ", you must join a voice channel I can access before using this command.").queue();
+            return;
+        }
+
         commands.get(command).execute(voiceChannel, event.getMessage(), plexBot);
     }
 
+    public List<User> findUser(String username) {
+        if (username.startsWith("@")) {
+            username = username.substring(1);
+            System.out.println("@ removed");
+        }
+        return discord.getUsersByName(username, true);
+    }
+
+    public List<Guild> getMutualGuilds(User...users) {
+        return discord.getMutualGuilds(users);
+    }
+
     public VoiceChannel getVoiceChannel(User user) {
-        List<VoiceChannel> vcs = discord.getVoiceChannels();
+        return getVoiceChannel(user, getMutualGuilds(user, discord.getSelfUser()));
+    }
+
+    public VoiceChannel getVoiceChannel(User user, List<Guild> guilds) {
+        List<VoiceChannel> vcs = new ArrayList<>();
+        for (Guild guild : guilds) {
+            vcs.addAll(guild.getVoiceChannels());
+        }
         for (VoiceChannel vc : vcs) {
             List<Member> members = vc.getMembers();
             for (Member member : members) {
@@ -115,6 +139,10 @@ public class DiscordConnection extends ListenerAdapter {
 
     public boolean isConnected() {
         return discord.getStatus() == Status.CONNECTED;
+    }
+
+    public SelfUser getSelfUser() {
+        return discord.getSelfUser();
     }
 
     public Set<Command> getCommands() {
